# fakturownia-rs

./: .gitignore  Cargo.toml
src/: lib.rs
src/client/: client.rs  invoice.rs  mod.rs
src/types/: invoice.rs  mod.rs
tests/: invoice_api.rs
tests/common/: mod.rs
tests/fixtures/: invoice.json
