[package]
name = "fakturownia-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }

[dev-dependencies]
wiremock = "=0.6.4"
